--- a/plugin.xml
+++ b/plugin.xml
@@ -45,5 +45,12 @@
         <source-file src="libs/android/armeabi-v7a/libsangfor_logger.so" target-dir="app/libs/armeabi-v7a"/>
         <source-file src="libs/android/armeabi-v7a/libsubstrate.so" target-dir="app/libs/armeabi-v7a"/>
         <source-file src="libs/android/armeabi-v7a/libsvpnservice.so" target-dir="app/libs/armeabi-v7a"/>
+        <source-file src="libs/android/x86/libauth_forward.so" target-dir="app/libs/x86"/>
+        <source-file src="libs/android/x86/libhttps.so" target-dir="app/libs/x86"/>
+        <source-file src="libs/android/x86/libpkcs12cert.so" target-dir="app/libs/x86"/>
+        <source-file src="libs/android/x86/libsangfor_bugreport.so" target-dir="app/libs/x86"/>
+        <source-file src="libs/android/x86/libsangfor_logger.so" target-dir="app/libs/x86"/>
+        <source-file src="libs/android/x86/libsubstrate.so" target-dir="app/libs/x86"/>
+        <source-file src="libs/android/x86/libsvpnservice.so" target-dir="app/libs/x86"/>
     </platform>
 </plugin>
