--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-easyapp" version="1.0.2"
+<plugin id="cordova-plugin-easyapp" version="1.0.3"
     xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>EasyAppPlugin</name>
@@ -53,4 +53,24 @@
         <source-file src="libs/android/x86/libsubstrate.so" target-dir="app/libs/x86"/>
         <source-file src="libs/android/x86/libsvpnservice.so" target-dir="app/libs/x86"/>
     </platform>
+
+    <!-- ios -->
+  <platform name="ios">
+
+    <config-file target="config.xml" parent="/*">
+      <feature name="EasyAppPlugin">
+        <param name="ios-package" value="EasyAppPlugin"/>
+      </feature>
+    </config-file>
+
+    <source-file src="src/ios/libSangforSdk.a" framework="true"/>
+    <header-file src="src/ios/AuthHelper.h"/>
+    <source-file src="src/ios/AuthHelper.m"/>
+    <header-file src="src/ios/sdkheader.h"/>
+    <header-file src="src/ios/sslvpnnb.h"/>
+
+    <header-file src="src/ios/EasyAppPlugin.h"/>
+    <source-file src="src/ios/EasyAppPlugin.m"/>
+
+  </platform>
 </plugin>
